# vixio

./: .gitignore  CONCURRENCY_AUDIT.md  LICENSE  README.md  __init__.py  docker-compose-inference-cn.yml  docker-compose-inference-gpu-cn.yml  docker-compose-inference-gpu.yml  docker-compose-inference.yml  docker-compose.yml  pyproject.toml  test_integration_simple.py
config/: __init__.py  loader.py  providers.yaml  providers_doubao.yaml  schema.py
core/: __init__.py  chunk.py  control_bus.py  middleware.py  pipeline.py  protocol.py  session.py  station.py  timeout_monitor.py  transport.py
core/tools/: __init__.py  converter.py  device.py  local.py  types.py
doc/: vixio 设计方案.md
docs/: README_zh.md  audio-format-architecture.md  dag-architecture-implementation.md  function_tool_design.md  package_design.md  realtime_multimodal_design.md  stations-reference.md  todo.md  transport_architecture.md  vision_design.md  vixio 设计方案.md
docs/design/: architecture_review.md  audio-format-architecture.md  cli_quickstart_design.md  dag-architecture-implementation.md  per-session-transport.md  qwen-asr-tts-redesign.md  session-lifecycle-refactoring.md  vixio_initial_design.md  vixio_langgraph_use.md
examples/: README.md  agent_chat.py  agent_chat_full.py  agent_chat_simple.py  agent_chat_streaming.py  custom_pipeline.py  multimodal_chat.py  realtime_chat.py  simple_echo.py  transcribe.py  voice_chat.py  xiaozhi_server.py
examples/xiaozhi/: .env.example  README.md  agent_chat_pipeline.py  agent_chat_streaming.py  pipeline.py  realtime_chat.py  streaming.py  transcribe.py
inference/: README.md  __init__.py  docker-compose-inference-cn.yml  docker-compose-inference-gpu-cn.yml  docker-compose-inference-gpu.yml
inference/kokoro/: README.md  compile_proto.sh  pyproject.toml
inference/kokoro_cn_tts_local/: Dockerfile  Dockerfile.gpu  README.md  client.py  compile_proto.sh  pyproject.toml
inference/sherpa_onnx_local/: Dockerfile  Dockerfile.gpu  README.md  __init__.py  compile_proto.sh  pyproject.toml  server.py
inference/silero_vad/: Dockerfile  Dockerfile.gpu  README.md  __init__.py  client.py  compile_proto.sh  pyproject.toml  server.py
micro_services/: README.md
micro_services/kokoro/: Dockerfile  README.md  __init__.py  compile_proto.sh  pyproject.toml  server.py  tts.proto  tts_pb2.py  tts_pb2_grpc.py
micro_services/sherpa_onnx_local/: README.md  asr.proto  asr_pb2_grpc.py  compile_proto.sh  pyproject.toml  server.py
micro_services/silero_vad/: README.md  compile_proto.sh  pyproject.toml  server.py  vad.proto  vad_pb2.py  vad_pb2_grpc.py
providers/: README.md  __init__.py  agent.py  asr.py  base.py  factory.py  registry.py  tts.py  vad.py  vision.py
providers/edge_tts/: __init__.py  provider.py
providers/kokoro/: __init__.py  grpc_provider.py
providers/openai_agent/: __init__.py  dump_promt.py  provider.py  tools.py
providers/sherpa_onnx_local/: __init__.py  grpc_provider.py  provider.py  shared_provider.py
providers/silero_vad/: __init__.py  grpc_provider.py  provider.py  shared_provider.py
providers/vision_describers/: __init__.py  base.py  composite.py  openai_compatible.py  vlm.py
scripts/: typecheck.sh
scripts/dev/: cleanup-services.sh  setup-services.sh  start-all.sh  stop-all.sh
scripts/k8s/: README.md  vad-service.yaml
src/vixio/: __init__.py  cli.py
src/vixio/config/: __init__.py  loader.py  schema.py
src/vixio/core/: __init__.py  chunk.py  control_bus.py  dag.py  dag_events.py  dag_monitor.py  middleware.py  output_controller.py  pipeline.py  protocol.py  session.py  session_context.py  station.py  transport.py
src/vixio/core/tools/: __init__.py  converter.py  device.py  local.py  types.py
src/vixio/providers/: __init__.py  agent.py  asr.py  base.py  factory.py  realtime.py  registry.py  tts.py  vad.py  vision.py
src/vixio/providers/doubao/: __init__.py  doubao_realtime.py  (+1 more)
src/vixio/stations/: __init__.py  agent.py  asr.py  join_node.py  logger.py  realtime.py  sentence_aggregator.py  text_aggregator.py  transport_stations.py  tts.py  turn_detector.py  vad.py  vision.py
src/vixio/transports/: __init__.py
src/vixio/utils/: __init__.py  latency_monitor.py  logger_config.py  model_downloader.py
src/vixio/xiaozhi/: __init__.py
stations/: __init__.py  agent.py  asr.py  filter.py  passthrough.py  sentence_aggregator.py  sentence_splitter.py  splitter.py  text_aggregator.py  transport_stations.py  tts.py  turn_detector.py  vad.py
stations/middlewares/: __init__.py  error_handler.py  event_emitter.py  input_validator.py  interrupt_detector.py  latency_monitor.py  multi_signal_handler.py  signal_handler.py  timeout_handler.py
tests/: HOW_TO_RUN_CONCURRENT_TEST.txt  README.md  __init__.py  conftest.py  pytest.ini  test_agent_station.py  test_asr_simple.py  test_asr_station.py  test_audio_convert.py  test_auth.py  test_chunk.py  test_chunks.py  test_client_interrupt.py  test_concurrent_xiaozhi.py  test_control_bus.py  test_dag.py  test_integration.py  test_interrupt.py  test_kokoro_simple.py  test_logger.py  test_memory_leak.py  test_middlewares.py  test_multi_session_isolation.py  test_network.py  test_pipeline.py  test_sentence_provider.py  test_sentence_splitter.py  test_shared_vs_regular.py  test_stations.py  test_transport.py  test_tts_station.py  test_turn_detector.py  test_vad_concurrent.py  test_vad_simple.py  test_vad_station.py  test_xiaozhi.py  test_xiaozhi_client.py  test_xiaozhi_transport.py  xiaozhi_client.py
tests/fixtures/: test_config.yaml
tests/test_audios/: stt.json
transports/: __init__.py
transports/http/: __init__.py  transport.py
transports/websocket/: __init__.py  transport.py
transports/xiaozhi/: __init__.py  device_tools.py  flow_control.py  ota_router.py  protocol.py  transport.py  vision_router.py
utils/: __init__.py  audio.py  auth.py  latency_monitor.py  logger_config.py  network.py  service_manager.py  text.py
utils/audio/: __init__.py  convert.py
web/xiaozhi/: README.md  index.html  package-lock.json  package.json
web/xiaozhi/src/: audio.js  main.js  style.css
(+65 files in other folders)
