[project]
name = "vixio"
version = "0.1.5"
description = "Voice-Powered Agent Framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Weyne Chen"}
]
keywords = ["voice", "agent", "ai", "speech", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================
# Core dependencies (minimal: config + logging only)
# ============================================================
dependencies = [
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "ruamel.yaml>=0.18.16",
    
    # Logging
    "loguru>=0.7.3",
]

# ============================================================
# Optional dependencies (modular installation)
# ============================================================
[project.optional-dependencies]

# ------------ Transport implementations ------------
# Xiaozhi protocol transport (WebSocket + HTTP)
xiaozhi = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=14.0,<15.0",
    "opuslib_next>=1.1.5",
    "PyJWT>=2.10.0",
    "aiohttp>=3.13.0",
    "aiohttp-cors>=0.8.0",
    "numpy>=1.26.0,<2.0.0",  # for audio conversion (resample, format conversion)
]

# ------------ gRPC providers (lightweight clients) ------------
# These connect to external gRPC services
# Deploy services via Docker/K8s from inference/ directory

# VAD: Connect to Silero VAD gRPC service
silero-vad-grpc = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
]

# ASR: Connect to Sherpa-ONNX ASR gRPC service
sherpa-onnx-asr-grpc = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "numpy>=1.26.0,<2.0.0",  # for audio data handling
]

# TTS: Connect to Kokoro TTS gRPC service
kokoro-cn-tts-grpc = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "numpy>=1.26.0,<2.0.0",  # for audio data handling
]

# ------------in-process local inference-----------------------
silero-vad-local = [
    "onnxruntime-gpu>=1.16.0",
    "numpy>=1.24.0",
    "silero-vad>=5.0",
]

sherpa-onnx-asr-local = [
    "onnxruntime-gpu>=1.16.0",
    "numpy>=1.24.0",
    "sherpa-onnx>=1.12.15",
    "huggingface_hub>=0.20.0",  # for auto-downloading models
]

kokoro-cn-tts-local = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "kokoro>=0.8.1",
    "misaki[zh]>=0.8.1",
]

# ------------ Cloud/API providers ------------
# Agent: OpenAI-compatible LLM (via LiteLLM)
openai-agent = [
    "openai-agents[litellm]>=0.4.2",
    "openai>=2.7.0",
    "httpx>=0.28.0",  # for vision describer API calls
]

# TTS: Microsoft Edge TTS (free, cloud-based)
edge-tts = [
    "edge-tts>=7.2.3",
    "pydub>=0.25.0",
]

# qwen platform provider(asr, tts)
# Requires dashscope>=1.25.3 for QwenTtsRealtime AudioFormat support
qwen = [
    "dashscope>=1.25.3"
]

# doubao platform provider(asr, tts, realtime)
# Uses Volcengine bidirectional WebSocket protocol
doubao = [
    "websockets>=14.0",
]

# ----------convenience settings --------------

# dev (local inference, requires GPU)
dev-local-cn = [
    "vixio[xiaozhi,openai-agent,silero-vad-local,sherpa-onnx-asr-local,kokoro-cn-tts-local]",
]

# dev (gRPC clients, connect to external inference services)
dev-grpc = [
    "vixio[xiaozhi,openai-agent,silero-vad-grpc,sherpa-onnx-asr-grpc,kokoro-cn-tts-grpc]",
]

# dev qwen (cloud ASR/TTS + local VAD)
dev-qwen = [
    "vixio[xiaozhi,openai-agent,silero-vad-local,qwen]",
]

# dev-qwen streming ,no silero
dev-qwen-streaming = [
    "vixio[xiaozhi,openai-agent,qwen]",
]

# dev doubao (cloud ASR/TTS)
dev-doubao = [
    "vixio[xiaozhi,openai-agent,doubao]",
]

# quick start (same as dev-qwen, for beginners)
quickstart = [
    "vixio[xiaozhi,openai-agent,silero-vad-local,qwen]",
]


# ------------ Development and test tools ------------
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.287",
    "pydub",
    "psutil>=7.0.0",  # for memory leak tests
]


# ============================================================
# Project URLs
# ============================================================
[project.urls]
Homepage = "https://github.com/weynechen/vixio"
Repository = "https://github.com/weynechen/vixio"
Issues = "https://github.com/weynechen/vixio/issues"

# ============================================================
# Entry points
# ============================================================
[project.scripts]
vixio = "vixio.cli:main"

# ============================================================
# Build system
# ============================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================
# uv workspace configuration (development only)
# ============================================================
[tool.uv.workspace]
members = [
    "inference/silero_vad",
    "inference/sherpa_onnx_local",
    "inference/kokoro_cn_tts_local",
]

[[tool.uv.index]]
name="PyPI"
url="https://pypi.org/simple/"

# Development: use local workspace members for testing
# Note: These are NOT published to PyPI
# Users should deploy inference services via Docker
[tool.uv.sources]
vixio-silero-vad-service = { workspace = true }
vixio-sherpa-asr-service = { workspace = true }
vixio-kokoro-tts-service = { workspace = true }

# ============================================================
# setuptools configuration
# ============================================================
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vixio*"]
exclude = ["tests*", "docs*", "examples*", "inference*"]

[tool.setuptools.package-data]
vixio = [
    "xiaozhi/presets/*.yaml",
    "xiaozhi/templates/**/*",
    "xiaozhi/templates/**/.env.example",
]

# ============================================================
# Tool configurations
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=vixio --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"
