[project]
name = "vixio-silero-vad-service"
version = "2.0.0"
description = "Silero VAD gRPC microservice for Vixio (ONNX-based for concurrent state isolation)"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime-gpu>=1.16.0",
    "numpy>=1.24.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "silero-vad>=5.0",
    "loguru>=0.7.0",
]



# UV package indexes (optional, for faster downloads in China)
# [[tool.uv.index]]
# url = "https://mirrors.aliyun.com/pypi/simple/"
# default = true

